--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social-layer",
+  "name": "samsarah-contracts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,15 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bhargavaparoksham/social-layer.git"
+    "url": "git+https://github.com/bhargavaparoksham/samsarah-contracts.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bhargavaparoksham/social-layer/issues"
+    "url": "https://github.com/bhargavaparoksham/samsarah-contracts/issues"
   },
-  "homepage": "https://github.com/bhargavaparoksham/social-layer#readme",
+  "homepage": "https://github.com/bhargavaparoksham/samsarah-contracts#readme",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
